parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr09.wacc
# type mismatch: char <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char c = "a"
end
